Changelog
=========

1.1.4 - unreleased
------------------


1.1.3 - 2011-01-27
------------------

- Provide intermediate certificates in the SSL config to avoid security
  warning in Firefox. Closes #165.
  [hannosch, baekholt]

1.1.2 - 2011-01-26
------------------

- Employee listing is fixed to not look too crammed with a column visible.
  References #153. Also wrapped the employees in micro formats.
  [denys]

- Revealed 'managePortletsFallback' link. Closes #147.
  [denys]

- Fixed the layout for when we have 2 columns or only the right one.
  Closes #146.
  [denys]

- Removed left margin from comments to align the portrait's left border with
  the rest of the content.
  [denys]

- Removed rotation from the profile picture.
  [denys]

- Fixed columns on the frontpage to have equal height.
  [denys]

1.1.1 - 2011-01-19
------------------

- Whenever an user uploads a file to the intranet it is checked for viruses
  and rejected if it contains one.
  Closes https://jira.jarn.com/browse/INTRANETT-137.
  [ggozad, hannosch]

1.1 - 2011-01-14
----------------

- Adapted fabric scripts to Github code hosting.
  [hannosch]

- Consolidate buildout configuration into one location and change branch
  concept to cover the entire buildout instead of individual distributions.
  [hannosch]

- Member portraits are now cropped in order to always result to a (100,100)
  image.
  [ggozad]

1.0 - 2010-12-22
----------------

- Updated Norwegian translation.
  [hannosch]

- Added i18n extraction and update scripts.
  [hannosch]

- Cleaned up employee listing template and correct i18n tags.
  [hannosch]

- Correct the i18n domain of the employees tab action.
  [hannosch]

0.9.1 - 2010-12-11
------------------

- Added SSL certificate / key to our buildout and use our versions in the
  Nginx config, instead of relying on Gocept to put them into `/etc/ssl`.
  [hannosch]

0.9 - 2010-12-08
----------------

- Added HSTS header to enforce HTTPS connections. Details at