@@ -4,6 +4,9 @@ Changelog
 1.1.4 - unreleased
 ------------------
 
+- It wasn't possible to assign portlets except for "static text" to the
+  frontpage. Closes #164.
+  [hannosch]
 
 1.1.3 - 2011-01-27
 ------------------
